--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
-  font-family: 'Outfit';
-  src: url('/src/assets/fonts/Outfit-VariableFont_wght.ttf');
-} */
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/assets/fonts/Poppins-Bold.ttf');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/assets/fonts/Poppins-ExtraBoldItalic.ttf');
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/assets/fonts/Poppins-Italic.ttf');
+  font-weight: 400;
+  font-style: italic;
+}
